// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CloudDocStorage broadcast updates > awareness joins active documents through the batch route 1`] = `
[
  {
    "event": "space:join-batch",
    "payload": {
      "clientVersion": "0.27.0",
      "spaces": [
        {
          "docId": "doc-a",
          "spaceId": "space-1",
          "spaceType": "workspace",
        },
        {
          "docId": "doc-b",
          "spaceId": "space-1",
          "spaceType": "workspace",
        },
      ],
    },
  },
  {
    "event": "space:load-awarenesses",
    "payload": {
      "docId": "doc-a",
      "spaceId": "space-1",
      "spaceType": "workspace",
    },
  },
  {
    "event": "space:load-awarenesses",
    "payload": {
      "docId": "doc-b",
      "spaceId": "space-1",
      "spaceType": "workspace",
    },
  },
]
`;

exports[`CloudDocStorage broadcast updates > batch route joins the workspace and applies lifecycle commands 1`] = `
{
  "emitted": [
    {
      "event": "space:join-batch",
      "payload": {
        "clientVersion": "0.27.0",
        "spaces": [
          {
            "spaceId": "space-1",
            "spaceType": "workspace",
          },
        ],
      },
    },
    {
      "event": "space:doc-lifecycle",
      "payload": {
        "docId": "doc-1",
        "lifecycle": "trash",
        "spaceId": "space-1",
        "spaceType": "workspace",
      },
    },
  ],
  "lifecycle": {
    "rootUpdate": Any<Uint8Array>,
    "timestamp": Any<Date>,
  },
}
`;
